clusters/beryjuio-home/home-assistant/esphome-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: esphome
    app.kubernetes.io/instance: main
  name: esphome
  namespace: home-assistant
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: esphome
      app.kubernetes.io/instance: main
  serviceName: "esphome"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: esphome
        app.kubernetes.io/instance: main
    spec:
      hostname: esphome
      containers:
        - name: esphome
          image: ghcr.io/esphome/esphome:2022.11.1
          ports:
            - containerPort: 6052
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
  volumeClaimTemplates:
    - metadata:
        name: config
        labels:
          app.kubernetes.io/name: esphome
          app.kubernetes.io/instance: main
          snapshot.home.arpa/enabled: "true"
      spec:
        resources:
          requests:
            storage: 10Gi
        accessModes:
          - ReadWriteOnce
