clusters/beryjuio-home/home-assistant/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: main
  name: home-assistant
  namespace: home-assistant
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
      app.kubernetes.io/instance: main
  serviceName: "home-assistant"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/instance: main
    spec:
      hostname: home-assistant
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:2022.11.3
          ports:
            - containerPort: 8123
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: zwave-usb
              mountPath: /dev/ttyACM0
      volumes:
        - name: zwave-usb
          hostPath:
            path: /dev/ttyACM0
  volumeClaimTemplates:
    - metadata:
        name: config
        labels:
          app.kubernetes.io/name: home-assistant
          app.kubernetes.io/instance: main
          snapshot.home.arpa/enabled: "true"
      spec:
        resources:
          requests:
            storage: 10Gi
        accessModes:
          - ReadWriteOnce
