clusters/beryjuio-home/home-assistant/esphome-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: home-assistant
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: esphome
  ports:
    - name: http
      port: 6052
      targetPort: http
