clusters/beryjuio-home/home-assistant/hass-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: home-assistant
  ports:
    - name: '8123'
      port: 8123
      targetPort: 8123
