clusters/beryjuio-home/home-assistant/esphome-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  namespace: home-assistant
spec:
  ingressClassName: istio
  rules:
    - host: esphome.${CLUSTER_NAME}.k8s.beryju.org
      http:
        paths:
          - backend:
              service:
                name: esphome
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - esphome.${CLUSTER_NAME}.k8s.beryju.org
      secretName: beryjuio-esphome
