clusters/beryjuio-home/home-assistant/hass-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  ingressClassName: istio
  rules:
    - host: home-assistant.${CLUSTER_NAME}.k8s.beryju.org
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - home-assistant.${CLUSTER_NAME}.k8s.beryju.org
      secretName: beryjuio-home-assistant
